public/style.css
@font-face {
  font-family: 'mercyregular';
  src: url('fonts/fontsfree-net-mercy-regular-webfont.woff2') format('woff2');
  src: url('fonts/fontsfree-net-mercy-regular-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  color:rgba(22, 22, 22, 0.22)
}

@font-face {
  font-family: 'clear_sans_thinregular';
  src: url('fonts/fontsfree-net-clearsans-thin-webfont.woff2') format('woff2');
  src: url('fonts/fontsfree-net-clearsans-thin-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'quicksandlight';
  src: url('/fonts/quicksand-variablefont_wght-webfont.woff2') format('woff2');
  src: url('/fonts/quicksand-variablefont_wght-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'highvalleyregular';
  src: url('fonts/fontsfree-net-highvalley-webfont.woff2') format('woff2');
  src: url('fonts/fontsfree-net-highvalley-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'balcony_signatureregular';
  src: url('fonts/fontsfree-net-balcony-webfont.woff2') format('woff2');
  src: url('fonts/fontsfree-net-balcony-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

body {
  font-family: "clear_sans_thinregular"
}

html,
body {
  width: 100%;
  overflow-x: hidden;
}

a {
  text-decoration: none;
}

label {
  display: block;
}

nav a {
  display: inline-block;
  margin: 1em;
}

form div {
  margin: 1em;
  display: inline-block;
}

.homeContent {
  display: flex;
  flex-direction: row;
  height: 100%;
}

.reminder-button{
  border-radius: 3px;
  padding: 5px 10px;
  background-color: #84a98c;
  color: white;
  border: none;
  margin-left: 3px
}

/* Game */
.gameFrame {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 350px;
  height: 525px;
  border: solid #d1d1d0 1px;
  border-radius: 50% / 35%;
  position: relative;
}

.gameFrame.morning {
  background: linear-gradient(180deg, #bde0fe 70%, #008000 30%);
}
.gameFrame.afternoon {
  background: linear-gradient(180deg, #e3f2fd 70%, #aacc00 30%);
}
.gameFrame.evening {
  background: linear-gradient(180deg, #031d44 70%, #41521f 30%);
  color: rgb(153, 153, 153);
}

.gameFrame .content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 55px;
}

.gameFrame .level {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.gameFrame .level h1 {
  font-size: 30px;
  font-family: "quicksandlight";
  font-weight: 500;
}
.gameFrame .level h2 {
  font-size: 20px;
  font-family: "quicksandlight";
  font-weight: 400;
}

.gameFrame .progress {
  width: 60%;
}

.gameFrame .game {
  display: flex;
  flex-direction: row;
  margin-top: 30px;
}

.tree {
  width: 75%;
  height: auto;
  flex-grow: 3;
}

.inventory {
  margin: 15px;
  align-self: flex-start;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex-grow: 2;
  margin: 15px;
}

.inventory .chest {
  width: 57px;
}

.inventory .rewards {
  display: flex;
  flex-direction: column;
}

.inventory .item {
  display: flex;
  flex-direction: row;
}

.inventory .img {
  width: 40px;
  margin: 3px;
}

.inventory span {
  font-size: 9px;
}

.game .bubble {
  font-size: 9px;
}

.gameFrame .congrats {
  height: 350px;
  width: 300px;
  position: relative;
  z-index: 5;
  top: 20%;
}

/*Login / Signup*/
.body-content-signin {
  display: flex;
  justify-content: center;
  align-items: center;
}

.signin {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 525px;
  width: 1000px;
  position: relative;
}

.signin-info {
  height: 100%;
  width: 50%;
  padding: 20px;
  display: flex;
  font-weight: 300;
  border: solid rgb(178, 178, 178) 0.5px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 0.5rem;
}

.signin-info.login {
  background-color: #deebdd;
  background-image: linear-gradient(315deg, #deebdd 0%, #bbdbbe 74%);
}

.signin-info.signup {
  background-color: #e4eee9;
  background-image: linear-gradient(315deg, #e4eee9 0%, #93a5ce 74%);
}

.signin-info h1 {
  font-family: 'mercyregular';
  font-size: 60px;
  color:rgba(0, 0, 0, 0.6);
  position: absolute;
  top: 60px;
}

.signin-info .form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 120px;
}

.signin-info form {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.signin-info .form-element {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 20px;
  margin: 5px;
}

.signin-info input {
  border-radius: 3px;
  color: gray;
  font-family: sans-serif;
  font-weight: 300;
  font-size: 13px;
  padding: 5px;
  border: solid #cccccc;
}

.signin-info small {
  font-size: 15px;
}

.signin .btn {
  width: 70px;
  align-self: center;
  padding: 5px;
  margin: 10px;
}

.signin-info h2 {
  font-family: 'clear_sans_thinregular';
  font-size: 30px;
  padding: 30px;
  z-index: 2;
  color: rgb(63, 63, 63);
}

.signin-info a {
  text-decoration: none;
  font-style: italic;
}
/*  StrecthList styling*/
.stretchlist-card {
  height: 100%;
  justify-content: space-between;
  align-content: space-between;
  padding: 10px;
}

/*  Favorite Stretches Styling */
.favorites-card {
  justify-content: space-between;
  align-content: space-between;
  padding: 15px;
  height: 100%;
}
#favorites-title {
  text-align: center;
  font-weight: bold;
  padding-bottom: 15px;
  font-family: "Cormorant", serif;
}

.favorites-remove-button {
  justify-self: flex-end;
  margin-top: auto;
}

/*  Pie Chart Styling*/
.pie-chart-container {
  display: flex;
  flex-direction: column;
  align-content: center;
}

/* */

.favorites-container {
  padding: 50px;
  height: 100vh;
  width: 100%;
}
/* Main Data Visualization Page Styling */

.data-viz-body {
  padding: 50px;
  width: 100%;
}

.graphs-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  text-align: center;
  padding: 50px;
}

.graph-column {
  width: 100%;
  padding-bottom: 20px;
}

.line-graph-container {
  margin: auto;
}

.data-viz-body {
  background-color: #d9d9d9;
}

#posture-pie-loading-message {
  text-align: center;
}

#pain-area-loading-message {
  text-align: center;
}

#discomfort-level-line-loading-message {
  text-align: center;
}

/* Sidebar Styling */
.navbar {
  background-color: #060b26;
  height: 80px;
  display: flex;
  justify-content: start;
  align-items: center;
}

.menu-bars {
  margin-left: 2rem;
  font-size: 2rem;
  background: none;
}

.nav-menu {
  background-color: #354f52;
  width: 250px;
  height: 100vh;
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  left: -100%;
  transition: 850ms;
}

.nav-menu.active {
  left: 0;
  transition: 350ms;
}

.nav-text {
  display: flex;
  justify-content: start;
  align-items: center;
  padding: 8px 0px 8px 16px;
  list-style: none;
  height: 60px;
}

.nav-text a {
  text-decoration: none;
  color: #f5f5f5;
  font-size: 18px;
  width: 95%;
  height: 100%;
  display: flex;
  align-items: center;
  padding: 0 16px;
  border-radius: 4px;
}

.nav-menu-items {
  width: 100%;
  padding: 40px;
  list-style-type: none;
}

.navbar-toggle {
  background-color: #354f52;
  width: 100%;
  height: 80px;
  display: flex;
  justify-content: start;
  align-items: center;
}

.sidebar-span {
  margin-left: 16px;
  text-decoration: none;
  color: white;
  /* font-size: 1.3rem;
  font-family: "Cormorant", serif; */
  font-size: 1.3rem;
  font-family: "quicksandlight", serif;
}

#popover-positioned-right {
  font-family: "clear_sans_thinregular";
}

li a {
  text-decoration: none;
}

.sidebar-span:hover {
  color: teal;
}

.side-line{
  text-decoration: none;
}

.spineify-title {
  color: white;
  /* font-size: 1.7rem;
  font-family: "Cormorant", serif; */
  font-size: 2.3rem;
  font-family: "mercyregular", serif;

}

.app-container {
  position: absolute;
  width: 100%;
}

.sidebar {
  position: fixed;
  background-color: #354f52;
}

.body-content {
  margin-left: 250px;
  background-color: #e9ebe8;
  height: 100vh;
  width: 100%;
}

.body-content-signin {
  background-color: white;
  height: 100vh;
  width: 100vw;
}

/*  Home styling */
#home {
  display: flex;
  flex-direction: column;
}

#home .reminder {
  font-family: "clear_sans_thinregular";
  font-weight: 1000;
}

.home-info {
  display: flex;
}

.welcome-info {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 50px;
  height: 600px;
  gap: 10px;
}

.homeContent {
  height: 400px;
  align-self: center;
  position:fixed;
  top: 25%;
  left: 65%;
}

.welcome-name {
  /* font-family: "Cormorant", serif;
  font-weight: bold;
  font-size: 1.7rem; */
  font-family: "balcony_signatureregular";
  font-size: 60px;
  margin-bottom: -19px;
  margin-left: -15px;
}

.welcome-paragraph {
  border: 1px solid black;
  padding: 15px;
  border-radius: 10px;
  font-size: 1rem;
  font-family: "Cormorant", serif;
  font-weight: 600;
  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
    rgba(0, 0, 0, 0.22) 0px 15px 12px;
}
/* Tracker */

.tracker-container {
  /* margin-left: 250px; */
  background-color: #354f52;
  margin-bottom: 50px;
  margin-top: 50px;
  height: 200px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 10px;
}

.tracker-button {
  border-radius: 3px;
  padding: 5px 22px;
  background-color: #84a98c;
  color: white;
  border: none;
}

.tracker-button:hover {
  background-color: #cad2c5;
  transition-duration: 300ms;
}

.tracker-button-container {
  display: flex;
  padding-bottom: 10px;
}

.tracker-btn-1 {
  margin-right: 10px;
}

.screenshot {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
  bottom: 5%;
  left: 8%;
}

#image {
  border-radius: 1rem;
}


.toggle-label {
  font-size: 12px;
  font-family: "Cormorant", serif;
}

/* #modal-button {
  border-radius: 3px;
  padding: 7px;
  background-color: #84a98c;
  color: white;
  border: none;
} */
#modal-button {
  border-radius: 3px;
  padding: 7px;
  background-color: #e9ebe8;
  color: black;
  border: 1px solid black;
  font-family: "clear_sans_thinregular";
  font-weight: 700;
}

#modal-button:hover {
  background-color: #84a98c;
  transition-duration: 300ms;
}

#instructions-button {
  /* font-family: "Cormorant"; */
  background-color: #354f52;
  border: none;
  /* margin-left: 16px; */
  margin-left: 4px;
  font-size: 1.3rem;
  font-family: "quicksandlight";

}

#instructions-button:hover {
  color: teal;
}

.clock{
  font-size: 28px;
  font-family: "quicksandlight", serif;
}

/* .home-dash{
  border-style: ;
} */
.stats-title{
  font-size: 19px;
  padding-top: 25px;
  font-family: "quicksandlight", serif;
}

.user-dash-container{
  position: absolute;
  top: 19%;

}

.take-survey-btn{
  position:static;
  top: 84%;
}

.stats-container{
  font-family: "FreeMono";
}

#instructions-button-dots {
  background-color: transparent;
  border:rgb(143, 143, 143) solid 2px;
  height: 33px;
  width: 20px;
  position: relative;
}

#instructions-button-dots ul {
  height: 20px;
  width: 20px;
  padding-left: 9px;
  padding-top: 0;
  position: absolute;
  top: -20%;
}

#instructions-button-dots li {
  color: black solid;
  height: 7px;
  width: 7px;
}

.modal-image {
  width: 765px;
  height: auto;
}

.image-button {
  border: none;
  background-color: transparent;
}

.image-button:hover {
  border: rgb(143, 143, 143) solid 2px;
  border-radius: 1rem;
}

.yest-progress-bar{
  font-family: "quicksandlight", serif;
  margin-bottom: 17px;
  margin-top: 8px;
}
.tip-for-today{
  font-family: "quicksandlight", serif;
}

